kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-cloud-app
  namespace: default
  labels:
    app: multi-cloud-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: multi-cloud-app
  sessionAffinity: None
